--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   dots_indicator: ^3.0.0
   flutter:
     sdk: flutter
+  font_awesome_flutter: ^10.8.0
   go_router: ^14.8.0
   google_fonts: ^6.2.1
 
